FlightPath 5.x Changelog
========================

2016-08-01
  Added jQuery includes in the print template files, in case they are needed for debugging.
  
  Fixed bug in History view, where "view/print all" wasn't correctly loading advising sessions
  in sequence.
  

2016-07-26
  Added ability to change popup window sizes in the System Settings form.  Popup window options are
  now stored in the FlightPath.settings javascript object.
  

2016-07-23
  Switched (much of) the course search module to use render arrays, so other modules can make changes.
  
  Added "back" link from Substitute popup


2016-07-16
  Fixed bug where sometimes subs in groups were not showing hours correctly, especially for transfer credits. Was
  fixed by ensuring the "req_by_degree_id" value was always passed along.
  
  Fixed bug in subs where "split sub hours" were being incorrectly reported.  This was because the course's data string
  was not being assembled correctly.

  Fixed issue where min/max hours for a group were not being displayed correctly.

  Added new theme hook, so modules can theme group select rows, to have custom messages.


2016-07-08
  Made tweaks to advising screen to make CSS re-themeing easier, and to make adding "extra html" easier to the group
  list popups as well as other areas.
  
  Made it so that function module_implements_hook() caches what it finds, at least for that one page load.  Helps speed up
  a little bit.
  
  Added new hook: hook_translate.  Called by t() function.
  
  

2016-06-29
  Fixed bug in Substitution system for split transfer subs, where hours were not being reported correctly.


2016-06-26
  Fixed bug in substitution reporting, where it wasn't correctly finding the split sub hours for transfer credits.
  
  Added new hook to core; to be able to alter footnotes.


2016-06-17
  Fixed bugs with substitution footnotes, in AdvisingScreenTypeView.  Substitutions were not being accurately displayed for footnotes.
